--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-perfect-scrollbar": "1.5.8",
     "react-popper": "2.3.0",
     "react-redux": "8.0.5",
+    "react-signature-canvas": "^1.0.6",
     "recharts": "2.5.0",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
