--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@mui/x-data-grid": "6.0.3",
     "@mui/x-date-pickers-pro": "^6.18.1",
     "@popperjs/core": "2.11.7",
-    "@reduxjs/toolkit": "1.9.5",
+    "@reduxjs/toolkit": "^1.9.7",
     "apexcharts-clevision": "3.28.5",
     "axios": "1.4.0",
     "axios-mock-adapter": "1.21.4",
@@ -49,6 +49,7 @@
     "date-fns": "2.30.0",
     "dayjs": "^1.11.10",
     "draft-js": "0.11.7",
+    "firebase": "^10.6.0",
     "i18next": "22.4.15",
     "i18next-browser-languagedetector": "7.0.1",
     "i18next-http-backend": "2.2.0",
